--- a/index.html
+++ b/index.html
@@ -446,60 +446,60 @@
   <!-- ✉️ FORMULÁRIO DE CONTATO -->
   <!-- ============================= -->
   <section id="contato" class="py-16 bg-gray-50">
-    <div class="max-w-[600px] mx-auto bg-white p-8 rounded-2xl shadow-md border border-gray-100">
-      <h2 class="text-2xl font-semibold text-center mb-6 text-gray-800">Entre em Contato</h2>
-      
-      <form id="contactForm" class="space-y-4">
-        <input id="nome" type="text" placeholder="Seu nome" required class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-1 focus:ring-blue-500">
-        <input id="email" type="email" placeholder="Seu email" required class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-1 focus:ring-blue-500">
-        <input id="assunto" type="text" placeholder="Assunto" required class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-1 focus:ring-blue-500">
-        <textarea id="mensagem" placeholder="Mensagem" required class="w-full border border-gray-300 rounded-md px-3 py-2 h-28 resize-none focus:ring-1 focus:ring-blue-500"></textarea>
-        <button type="submit" class="bg-blue-600 text-white font-medium px-4 py-2 rounded-md w-full hover:bg-blue-700 transition">Enviar</button>
-      </form>
-      <p id="status" class="mt-3 text-sm text-center"></p>
-    </div>
+  <div class="max-w-[600px] mx-auto bg-white p-8 rounded-2xl shadow-md border border-gray-100">
+    <h2 class="text-2xl font-semibold text-center mb-6 text-gray-800">Entre em Contato</h2>
+    
+    <form id="contactForm" class="space-y-4">
+      <input id="name" type="text" placeholder="Seu nome" required class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-1 focus:ring-blue-500">
+      <input id="email" type="email" placeholder="Seu email" required class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-1 focus:ring-blue-500">
+      <input id="subject" type="text" placeholder="Assunto" required class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-1 focus:ring-blue-500">
+      <textarea id="message" placeholder="Mensagem" required class="w-full border border-gray-300 rounded-md px-3 py-2 h-28 resize-none focus:ring-1 focus:ring-blue-500"></textarea>
+      <button type="submit" class="bg-blue-600 text-white font-medium px-4 py-2 rounded-md w-full hover:bg-blue-700 transition">Enviar</button>
+    </form>
+    <p id="status" class="mt-3 text-sm text-center"></p>
+  </div>
 
-    <!-- Firebase -->
-    <script type="module">
-      import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
-      import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
+  <!-- Firebase -->
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
+    import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
 
-      const firebaseConfig = {
-        apiKey: "AIzaSyCXvccq220EDORjeLig90Iwna27HrRMJS8",
-        authDomain: "formulario-de-contato-6c213.firebaseapp.com",
-        projectId: "formulario-de-contato-6c213",
-        storageBucket: "formulario-de-contato-6c213.firebasestorage.app",
-        messagingSenderId: "916368258641",
-        appId: "1:916368258641:web:ab564fab4bc0e0f3a72a70"
+    const firebaseConfig = {
+      apiKey: "AIzaSyCXvccq220EDORjeLig90Iwna27HrRMJS8",
+      authDomain: "formulario-de-contato-6c213.firebaseapp.com",
+      projectId: "formulario-de-contato-6c213",
+      storageBucket: "formulario-de-contato-6c213.firebasestorage.app",
+      messagingSenderId: "916368258641",
+      appId: "1:916368258641:web:ab564fab4bc0e0f3a72a70"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
+    const form = document.getElementById('contactForm');
+    const status = document.getElementById('status');
+
+    form.addEventListener('submit', async (e) => {
+      e.preventDefault();
+      const data = {
+        name: form.name.value.trim(),
+        email: form.email.value.trim(),
+        subject: form.subject.value.trim(),
+        message: form.message.value.trim(),
+        timestamp: new Date()
       };
 
-      const app = initializeApp(firebaseConfig);
-      const db = getFirestore(app);
-      const form = document.getElementById('contactForm');
-      const status = document.getElementById('status');
-
-      form.addEventListener('submit', async (e) => {
-        e.preventDefault();
-        const data = {
-          nome: form.nome.value.trim(),
-          email: form.email.value.trim(),
-          assunto: form.assunto.value.trim(),
-          mensagem: form.mensagem.value.trim(),
-          timestamp: new Date()
-        };
-
-        try {
-          await addDoc(collection(db, "contact_submissions"), data);
-          status.textContent = "✅ Mensagem enviada com sucesso!";
-          status.className = "mt-3 text-green-600 text-sm text-center";
-          form.reset();
-        } catch (error) {
-          status.textContent = "❌ Ocorreu um erro. Tente novamente.";
-          status.className = "mt-3 text-red-500 text-sm text-center";
-        }
-      });
-    </script>
-  </section>
+      try {
+        await addDoc(collection(db, "contact_submissions"), data);
+        status.textContent = "✅ Mensagem enviada com sucesso!";
+        status.className = "mt-3 text-green-600 text-sm text-center";
+        form.reset();
+      } catch (error) {
+        status.textContent = "❌ Ocorreu um erro. Tente novamente.";
+        status.className = "mt-3 text-red-500 text-sm text-center";
+      }
+    });
+  </script>
+        </section>
 
 </main>
 
