--- a/index.html
+++ b/index.html
@@ -50,9 +50,6 @@
   <!-- style.css -->
   <link href="style.css" rel="stylesheet">
 
-  <!-- espaço GA -->
-  <!-- Google Analytics -->
-
   <!-- ajuste mobile do bordão -->
   <style>
     @media (max-width: 991px) {
@@ -74,13 +71,11 @@
   <!-- HEADER -->
   <header class="py-3" style="background:#2b2b2b;">
     <div class="container d-flex align-items-center justify-content-between">
-
       <!-- LOGO + TÍTULO -->
       <a href="#" class="d-flex align-items-center text-decoration-none">
         <img src="https://portalciencianews.com.br/logo.png" alt="Ciência News" style="height:48px;" class="me-2">
         <span class="h5 mb-0 text-white">Ciência News</span>
       </a>
-
       <!-- SOCIALS (desktop) -->
       <div class="d-none d-md-flex gap-3">
         <i class="bi bi-facebook text-white fs-4"></i>
@@ -90,33 +85,23 @@
         <i class="bi bi-camera-video text-white fs-4"></i>
         <i class="bi bi-whatsapp text-white fs-4"></i>
       </div>
-
     </div>
   </header>
 
   <!-- NAVBAR -->
   <nav class="navbar navbar-expand-lg" style="background:#ff7a00 !important;">
     <div class="container">
-
-      <!-- BORDÃO MOBILE AJUSTADO -->
       <span class="navbar-brand d-lg-none text-white fw-semibold navbar-slogan-mobile">
         Uma pílula com notícias sobre ciências
       </span>
-
-      <!-- toggler -->
       <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#mainCollapse">
         <i class="bi bi-list text-white fs-2"></i>
       </button>
-
-      <!-- collapse -->
       <div class="collapse navbar-collapse" id="mainCollapse">
-
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item"><a class="nav-link text-white" href="#">Início</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="#">Arquivos</a></li>
-          </ul>
-
-        <!-- socials mobile -->
+        </ul>
         <div class="d-lg-none mt-3 d-flex gap-3">
           <i class="bi bi-facebook text-white fs-4"></i>
           <i class="bi bi-instagram text-white fs-4"></i>
@@ -125,7 +110,6 @@
           <i class="bi bi-camera-video text-white fs-4"></i>
           <i class="bi bi-whatsapp text-white fs-4"></i>
         </div>
-
       </div>
     </div>
   </nav>
@@ -138,7 +122,6 @@
 <section class="my-5">
     <div class="container">
         <div class="row g-4 align-items-start">
-
             <!-- CARD PRINCIPAL (horizontal) -->
             <div class="col-12 col-md-8">
                 <div class="card shadow-lg border-0 h-100">
@@ -149,7 +132,6 @@
                                  class="img-fluid h-100 w-100 object-fit-cover"
                                  alt="Imagem ilustrativa do cometa 3I/ATLAS">
                         </div>
-
                         <!-- Conteúdo -->
                         <div class="col-md-6 d-flex flex-column justify-content-center p-4 bg-primary text-white">
                             <h2 class="fw-bold mb-3">
@@ -163,7 +145,6 @@
                     </div>
                 </div>
             </div>
-
             <!-- SIDEBAR CARD -->
             <aside class="col-12 col-md-4">
                 <div class="card shadow-lg border-0 h-100">
@@ -184,7 +165,6 @@
                     </div>
                 </div>
             </aside>
-
         </div>
     </div>
 </section>
@@ -203,7 +183,7 @@
                     <div class="ratio ratio-16x9">
                         <iframe src="https://www.youtube.com/embed/K_RI7v5qCNQ?controls=0"
                                 class="rounded-top"
-                                allowfullscreen></iframe>
+                                style="pointer-events: none;" tabindex="-1"></iframe>
                     </div>
                     <div class="card-body">
                         <h2 class="fs-5 fw-bold">
@@ -224,7 +204,7 @@
                     <div class="ratio ratio-16x9">
                         <iframe src="https://www.youtube.com/embed/XfCOgFORy_I?controls=0"
                                 class="rounded-top"
-                                allowfullscreen></iframe>
+                                style="pointer-events: none;" tabindex="-1"></iframe>
                     </div>
                     <div class="card-body">
                         <h2 class="fs-5 fw-bold">
@@ -245,7 +225,7 @@
                     <div class="ratio ratio-16x9">
                         <iframe src="https://www.youtube.com/embed/1A0Y3SPTTg8?controls=0"
                                 class="rounded-top"
-                                allowfullscreen></iframe>
+                                style="pointer-events: none;" tabindex="-1"></iframe>
                     </div>
                     <div class="card-body">
                         <h2 class="fs-5 fw-bold">
@@ -272,9 +252,7 @@
         <h2 class="text-center fw-bold mb-5 text-primary fs-1">
             Novidades da Ciência e Tecnologia
         </h2>
-
         <div class="row g-4">
-
             <!-- CARD 1 -->
             <div class="col-md-4">
                 <div class="card bg-indigo text-white border-0 shadow-lg h-100" style="background:#1a237e;">
@@ -291,7 +269,6 @@
                     </div>
                 </div>
             </div>
-
             <!-- CARD 2 -->
             <div class="col-md-4">
                 <div class="card bg-indigo text-white border-0 shadow-lg h-100" style="background:#1a237e;">
@@ -308,7 +285,6 @@
                     </div>
                 </div>
             </div>
-
             <!-- CARD 3 -->
             <div class="col-md-4">
                 <div class="card bg-indigo text-white border-0 shadow-lg h-100" style="background:#1a237e;">
@@ -325,11 +301,9 @@
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
 </section>
-
 
 <!-- ============================= -->
 <!-- ÚLTIMOS ARTIGOS -->
@@ -337,9 +311,7 @@
 <section class="py-5">
     <div class="container">
         <h2 class="text-center fw-bold mb-5 text-primary fs-1">Últimos Artigos</h2>
-
         <div class="row g-4">
-
             <!-- CARD 1 -->
             <div class="col-md-4">
                 <div class="card bg-indigo text-white shadow-lg h-100 border-0" style="background:#1a237e;">
@@ -353,7 +325,6 @@
                     </div>
                 </div>
             </div>
-
             <!-- CARD 2 -->
             <div class="col-md-4">
                 <div class="card bg-indigo text-white shadow-lg h-100 border-0" style="background:#1a237e;">
@@ -367,7 +338,6 @@
                     </div>
                 </div>
             </div>
-
             <!-- CARD 3 -->
             <div class="col-md-4">
                 <div class="card bg-indigo text-white shadow-lg h-100 border-0" style="background:#1a237e;">
@@ -383,7 +353,6 @@
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
 </section>
@@ -401,9 +370,11 @@
                 <div class="card shadow-md border-0 h-100">
                     <div class="position-relative overflow-hidden" style="height:220px;">
                         <img src="https://img.youtube.com/vi/0GZvOz7s9UY/hqdefault.jpg"
-                             class="w-100 h-100 object-fit-cover">
+                             class="w-100 h-100 object-fit-cover" alt="Miniatura do vídeo Descoberta a estrela mais pura do universo conhecido">
+                        <!-- Botão continua clicável, imagem NÃO -->
                         <button onclick="window.open('https://youtu.be/0GZvOz7s9UY','_blank')"
-                                class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center justify-content-center bg-dark bg-opacity-50">
+                                class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center justify-content-center bg-dark bg-opacity-50"
+                                style="pointer-events: auto;">
                             <i class="bi bi-play-circle-fill text-white display-1"></i>
                         </button>
                     </div>
@@ -412,7 +383,7 @@
                             Descoberta a estrela mais pura do universo conhecido
                         </h3>
                         <a href="https://youtu.be/0GZvOz7s9UY"
-                           class="btn btn-danger mt-2">
+                           class="btn btn-danger mt-2" target="_blank">
                             <i class="bi bi-youtube"></i> Assistir
                         </a>
                     </div>
@@ -424,9 +395,10 @@
                 <div class="card shadow-md border-0 h-100">
                     <div class="position-relative overflow-hidden" style="height:220px;">
                         <img src="https://img.youtube.com/vi/EOWMCgjsjtE/hqdefault.jpg"
-                             class="w-100 h-100 object-fit-cover">
+                             class="w-100 h-100 object-fit-cover" alt="Miniatura do vídeo Matéria escura e energia escura podem ser uma ilusão">
                         <button onclick="window.open('https://youtu.be/EOWMCgjsjtE','_blank')"
-                                class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center justify-content-center bg-dark bg-opacity-50">
+                                class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center justify-content-center bg-dark bg-opacity-50"
+                                style="pointer-events: auto;">
                             <i class="bi bi-play-circle-fill text-white display-1"></i>
                         </button>
                     </div>
@@ -435,7 +407,7 @@
                             Matéria escura e energia escura podem ser uma ilusão
                         </h3>
                         <a href="https://youtu.be/EOWMCgjsjtE"
-                           class="btn btn-danger mt-2">
+                           class="btn btn-danger mt-2" target="_blank">
                             <i class="bi bi-youtube"></i> Assistir
                         </a>
                     </div>
@@ -447,9 +419,10 @@
                 <div class="card shadow-md border-0 h-100">
                     <div class="position-relative overflow-hidden" style="height:220px;">
                         <img src="https://img.youtube.com/vi/hRzQcjVm2pw/hqdefault.jpg"
-                             class="w-100 h-100 object-fit-cover">
+                             class="w-100 h-100 object-fit-cover" alt="Miniatura do vídeo Detectados sinais que podem vir de outro universo">
                         <button onclick="window.open('https://youtu.be/hRzQcjVm2pw','_blank')"
-                                class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center justify-content-center bg-dark bg-opacity-50">
+                                class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center justify-content-center bg-dark bg-opacity-50"
+                                style="pointer-events: auto;">
                             <i class="bi bi-play-circle-fill text-white display-1"></i>
                         </button>
                     </div>
@@ -458,13 +431,12 @@
                             Detectados sinais que podem vir de outro universo
                         </h3>
                         <a href="https://youtu.be/hRzQcjVm2pw"
-                           class="btn btn-danger mt-2">
+                           class="btn btn-danger mt-2" target="_blank">
                             <i class="bi bi-youtube"></i> Assistir
                         </a>
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
 </section>
@@ -475,7 +447,6 @@
 <section class="py-5">
     <div class="container">
         <h2 class="text-center fw-bold mb-5 fs-2">Mais vistos do Ciência News</h2>
-
         <div class="row g-4">
 
             <!-- Card 1 -->
@@ -483,56 +454,53 @@
                 <article class="card shadow-lg border-0 h-100">
                     <div class="ratio ratio-16x9">
                         <iframe src="https://www.youtube.com/embed/SQ6i4ea5gW4"
-                                allowfullscreen></iframe>
+                                style="pointer-events: none;" tabindex="-1"></iframe>
                     </div>
                     <div class="card-body text-center">
                         <h3 class="fw-bold fs-5 mb-3">Orca devora tubarão branco</h3>
                         <a href="https://www.youtube.com/watch?v=SQ6i4ea5gW4"
-                           class="btn btn-danger">
+                           class="btn btn-danger" target="_blank">
                             <i class="bi bi-youtube"></i> Assistir
                         </a>
                     </div>
                 </article>
             </div>
-
             <!-- Card 2 -->
             <div class="col-md-4">
                 <article class="card shadow-lg border-0 h-100">
                     <div class="ratio ratio-16x9">
                         <iframe src="https://www.youtube.com/embed/wVkEAwrEIS0"
-                                allowfullscreen></iframe>
+                                style="pointer-events: none;" tabindex="-1"></iframe>
                     </div>
                     <div class="card-body text-center">
                         <h3 class="fw-bold fs-5 mb-3">
                             O pássaro que imita o choro de um bebê
                         </h3>
                         <a href="https://www.youtube.com/watch?v=wVkEAwrEIS0"
-                           class="btn btn-danger">
+                           class="btn btn-danger" target="_blank">
                             <i class="bi bi-youtube"></i> Assistir
                         </a>
                     </div>
                 </article>
             </div>
-
             <!-- Card 3 -->
             <div class="col-md-4">
                 <article class="card shadow-lg border-0 h-100">
                     <div class="ratio ratio-16x9">
                         <iframe src="https://www.youtube.com/embed/yJkLrHIYKBc"
-                                allowfullscreen></iframe>
+                                style="pointer-events: none;" tabindex="-1"></iframe>
                     </div>
                     <div class="card-body text-center">
                         <h3 class="fw-bold fs-5 mb-3">
                             Novas imagens da chegada do homem à Lua
                         </h3>
                         <a href="https://www.youtube.com/watch?v=yJkLrHIYKBc"
-                           class="btn btn-danger">
+                           class="btn btn-danger" target="_blank">
                             <i class="bi bi-youtube"></i> Assistir
                         </a>
                     </div>
                 </article>
             </div>
-
         </div>
     </div>
 </section>
@@ -543,41 +511,31 @@
 <section id="contato" class="py-5 bg-light">
   <div class="container">
     <div class="mx-auto p-4 p-md-5 bg-white rounded-4 shadow" style="max-width:600px;">
-
       <h2 class="text-center mb-4">Entre em Contato</h2>
-
       <form id="contactForm" class="">
-
         <div class="mb-3">
           <label for="name" class="form-label">Seu nome</label>
           <input id="name" type="text" class="form-control" placeholder="Seu nome" required>
         </div>
-
         <div class="mb-3">
           <label for="email" class="form-label">Seu email</label>
           <input id="email" type="email" class="form-control" placeholder="Seu email" required>
         </div>
-
         <div class="mb-3">
           <label for="subject" class="form-label">Assunto</label>
           <input id="subject" type="text" class="form-control" placeholder="Assunto" required>
         </div>
-
         <div class="mb-3">
           <label for="message" class="form-label">Mensagem</label>
           <textarea id="message" class="form-control" rows="4" placeholder="Mensagem" required></textarea>
         </div>
-
         <button type="submit" class="btn btn-primary w-100 py-2 fw-semibold">
           Enviar
         </button>
-
       </form>
-
       <p id="status" class="mt-3 text-sm text-center"></p>
     </div>
   </div>
-
   <!-- Firebase -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
@@ -606,7 +564,6 @@
         message: form.message.value.trim(),
         timestamp: new Date()
       };
-
       try {
         await addDoc(collection(db, "contact_submissions"), data);
         status.textContent = "✅ Mensagem enviada com sucesso!";
@@ -620,14 +577,11 @@
   </script>
 </section>
 
-
 </main>
 
-
- <!-- FOOTER -->
+<!-- FOOTER -->
 <footer class="py-4 mt-5 text-center text-white" style="background:#2b2b2b;">
   <p class="mb-2">© 2025 Portal Ciência News</p>
-  
   <!-- MegaContador -->
   <div class="d-inline-block px-3 py-2 rounded shadow" style="background:#0d47a1;">
     <span class="me-2" style="font-size:0.9rem; font-weight:600;">Visualizações:</span>
@@ -637,12 +591,7 @@
   </div>
 </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-  <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
-  </script>
-
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-
 </body>
 </html>
