--- a/index.html
+++ b/index.html
@@ -71,50 +71,61 @@
   <!-- HEADER -->
   <header class="py-3" style="background:#2b2b2b;">
     <div class="container d-flex align-items-center justify-content-between">
+
       <!-- LOGO + TÍTULO -->
       <a href="#" class="d-flex align-items-center text-decoration-none">
         <img src="https://portalciencianews.com.br/logo.png" alt="Ciência News" style="height:48px;" class="me-2">
         <span class="h5 mb-0 text-white">Ciência News</span>
       </a>
+
       <!-- SOCIALS (desktop) -->
       <div class="d-none d-md-flex gap-3">
-        <i class="bi bi-facebook text-white fs-4"></i>
-        <i class="bi bi-instagram text-white fs-4"></i>
-        <i class="bi bi-youtube text-white fs-4"></i>
-        <i class="bi bi-tiktok text-white fs-4"></i>
-        <i class="bi bi-camera-video text-white fs-4"></i>
-        <i class="bi bi-whatsapp text-white fs-4"></i>
+        <a href="https://www.facebook.com/profile.php?id=100079774894307"><i class="bi bi-facebook text-white fs-4"></i></a>
+        <a href="https://www.instagram.com/ciencianews1/"><i class="bi bi-instagram text-white fs-4"></i></a>
+        <a href="https://www.youtube.com/@CienciaNewsOficial"><i class="bi bi-youtube text-white fs-4"></i></a>
+        <a href="https://www.tiktok.com/@canalciencianews?_t=ZM-8yudMEh6wI2&_r=1"><i class="bi bi-tiktok text-white fs-4"></i></a>
+        <a href="https://www.kwai.com/@CanalCienciaNews"><i class="bi bi-camera-video text-white fs-4"></i></a>
+        <a href="https://whatsapp.com/channel/0029VaAxpuNDOQIOYg1sP70c"><i class="bi bi-whatsapp text-white fs-4"></i></a>
       </div>
+
     </div>
   </header>
 
   <!-- NAVBAR -->
   <nav class="navbar navbar-expand-lg" style="background:#ff7a00 !important;">
     <div class="container">
+
       <span class="navbar-brand d-lg-none text-white fw-semibold navbar-slogan-mobile">
         Uma pílula com notícias sobre ciências
       </span>
+
       <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#mainCollapse">
         <i class="bi bi-list text-white fs-2"></i>
       </button>
+
       <div class="collapse navbar-collapse" id="mainCollapse">
+
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item"><a class="nav-link text-white" href="#">Início</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="#">Arquivos</a></li>
         </ul>
+
+        <!-- SOCIALS (mobile) -->
         <div class="d-lg-none mt-3 d-flex gap-3">
-          <i class="bi bi-facebook text-white fs-4"></i>
-          <i class="bi bi-instagram text-white fs-4"></i>
-          <i class="bi bi-youtube text-white fs-4"></i>
-          <i class="bi bi-tiktok text-white fs-4"></i>
-          <i class="bi bi-camera-video text-white fs-4"></i>
-          <i class="bi bi-whatsapp text-white fs-4"></i>
+          <a href="https://www.facebook.com/profile.php?id=100079774894307"><i class="bi bi-facebook text-white fs-4"></i></a>
+          <a href="https://www.instagram.com/ciencianews1/"><i class="bi bi-instagram text-white fs-4"></i></a>
+          <a href="https://www.youtube.com/@CienciaNewsOficial"><i class="bi bi-youtube text-white fs-4"></i></a>
+          <a href="https://www.tiktok.com/@canalciencianews?_t=ZM-8yudMEh6wI2&_r=1"><i class="bi bi-tiktok text-white fs-4"></i></a>
+          <a href="https://www.kwai.com/@CanalCienciaNews"><i class="bi bi-camera-video text-white fs-4"></i></a>
+          <a href="https://whatsapp.com/channel/0029VaAxpuNDOQIOYg1sP70c"><i class="bi bi-whatsapp text-white fs-4"></i></a>
         </div>
+
       </div>
     </div>
   </nav>
 
-  <main id="mainContent" class="site-main bg-white" style="min-height:400px;">
+
+ <main id="mainContent" class="site-main bg-white" style="min-height:400px;">
 
 <!-- ============================= -->
 <!-- CARDS LADO A LADO -->
