--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
       }
     }
   </style>
-
 </head>
 <body>
 
@@ -99,7 +98,7 @@
         Uma pílula com notícias sobre ciências
       </span>
 
-      <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#mainCollapse">
+      <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#mainCollapse" aria-controls="mainCollapse" aria-expanded="false" aria-label="Toggle navigation" id="navbarToggler">
         <i class="bi bi-list text-white fs-2"></i>
       </button>
 
@@ -123,7 +122,6 @@
       </div>
     </div>
   </nav>
-
 
  <main id="mainContent" class="site-main bg-white" style="min-height:400px;">
 
@@ -602,7 +600,25 @@
   </div>
 </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Ajuste para menu hamburger fechar ao clicar novamente -->
+  <script>
+    document.addEventListener("DOMContentLoaded", function() {
+      var toggler = document.getElementById("navbarToggler");
+      var collapse = document.getElementById("mainCollapse");
+      // Remove o atributo data-bs-toggle para evitar conflito com o JS customizado
+      if (toggler) toggler.removeAttribute('data-bs-toggle');
+      if (toggler && collapse) {
+        var bsCollapse = new bootstrap.Collapse(collapse, {toggle: false});
+        toggler.addEventListener("click", function() {
+          var isShown = collapse.classList.contains('show');
+          if (isShown) {
+            bsCollapse.hide();
+          } else {
+            bsCollapse.show();
+          }
+        });
+      }
+    });
+  </script>
 </body>
 </html>
